--- a/02-academia-online/package.json
+++ b/02-academia-online/package.json
@@ -12,6 +12,7 @@
   "author": "Santiago Sanchez",
   "license": "MIT",
   "dependencies": {
+    "@graphql-tools/utils": "^8.12.0",
     "apollo-server-express": "^3.10.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
